--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "movie-db",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
   "build": "tsc",
   "prestart": "npm run build",
-  "start": "node dist/app.js"
+  "start": "node dist/server.js"
 },
   "keywords": [],
   "author": "",
